test/error/iocheck/err7.rzy
// Error: transition guard is not allowed to write state

Err7 = Hfsm
  inp : slot();
  out : signal();

  state(A)
    foo = function():Boolean
      out();
      return True;
    end
    
    A : state;
    B : state;
    
    A to B by inp() if foo();
  end
  
end

